--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["Cameron Irmas <cirmas@protonmail.com>"]
 version = "0.1.0"
 
 [deps]
+PlotlyBase = "a03496cd-edff-5a9b-9e67-9cda94a718b5"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
